# Filtrowanie-danych-z-ankiety

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_REPORT.md  ENTERPRISE_STATUS.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  quality.yml  release.yml  security.yml
db/: README.md
docs/: DEPLOYMENT.md  USER_GUIDE.md
tests/: README.md  conftest.py
